buildscript {
    repositories {
        maven {
            name = 'GTNH Maven'
            url = 'https://nexus.gtnewhorizons.com/repository/public/'
        }
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        classpath 'com.gtnewhorizons:retrofuturagradle:2.0.2'
    }
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'eclipse'
apply plugin: 'com.gtnewhorizons.retrofuturagradle'

version = "0.8.0"
group = "com.charles445.simpledifficulty"

// Gradle 9 syntax
base {
    archivesName = 'SimpleDifficulty'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(8))
}

minecraft {
    mcVersion = '1.12.2'
    username = 'Developer'
}

repositories {
    mavenCentral()
    maven {
        name = "SpongePowered"
        url = "https://repo.spongepowered.org/repository/maven-public/"
    }
    maven {
        name = 'CurseForge'
        url = 'https://www.cursemaven.com'
    }
    maven {
        name = 'CleanroomMC'
        url = 'https://maven.cleanroommc.com'
    }
    maven {
        name = 'Fluidlogged API'
        url = 'https://jitpack.io'
    }
}

dependencies {
    def mixin = 'zone.rong:mixinbooter:11.12'

    modUtils.enableMixins(mixin)
    
    implementation (mixin) {
        transitive = false
    }
    annotationProcessor mixin
    
    // Streams
    implementation rfg.deobf('curse.maven:streams-229769:3109315')
    implementation rfg.deobf('curse.maven:farseek-229708:3093852')

    // Serene Seasons
    compileOnly rfg.deobf('curse.maven:sereneseasons-291874:2799213')

    // Dynamic Trees
    compileOnly rfg.deobf('curse.maven:DynamicTrees-252818:3812473')

    // Inspirations
    compileOnly rfg.deobf('curse.maven:inspirations-284007:2843007')

    // Fluidlogged API
    implementation rfg.deobf('com.github.jbredwards:fluidlogged-api:1.12.2-Latest-SNAPSHOT')

    // Traveler's Backpack
    implementation rfg.deobf('curse.maven:travelers-backpack-321117:3150850')
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
        version: project.version.toString(),
        'project.version': project.version.toString()
    ]
    inputs.properties replaceProperties

    filesMatching(['mcmod.info', 'pack.mcmeta']) {
        expand(replaceProperties)
    }
}


tasks.register('apiJar', Jar) {
    archiveClassifier.set('api')
    from(sourceSets.main.allJava) {
        include 'com/charles445/simpledifficulty/api/**'
    }
}

artifacts {
    archives apiJar
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
            'FMLCorePluginContainsFMLMod': 'com.charles445.simpledifficulty.SimpleDifficulty',
            'ForceLoadAsMod': 'true'
        ])
    }
}
